pi-cluster/cluster/apps/nest-exporter/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-exporter
  namespace: nest-exporter
  labels:
    app: nest-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-exporter
  template:
    metadata:
      labels:
        app: nest-exporter
    spec:
      containers:
        - name: nest-exporter
          image: theeadie/nest-exporter:2.0.12@sha256:2ca4a29897bd9f8046681d8d861ad51aa6868546ecad178a0e4200a8cabdac72
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
