pi-cluster/cluster/apps/nest-exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nest-exporter
  namespace: nest-exporter
  labels:
    app: nest-exporter
spec:
  selector:
    app: nest-exporter
  ports:
    - name: http
      protocol: TCP
      port: 80
